--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "bulma": "^0.9.4",
+    "bulma-list": "^1.2.0",
+    "bulma-timeline": "^3.0.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-meta": "^3.0.0-alpha.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
